add messages with function

--- a/css/style.css
+++ b/css/style.css
@@ -12,5 +12,14 @@ body {
 }
 
 #message-form .btn-primary {
-    min-width: 150px;
+  min-width: 150px;
+}
+
+#messages {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+#messages .box + .box {
+  margin-top: 20px;
 }
